--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Quant Tools
 Version: 0.5.0
 Author: Stanislav Kovalevsky
 Maintainer: Stanislav Kovalevsky <so.kovalevsky@gmail.com>
-Description: Download and store historical market data. Plot time series objects in a various formats. c++ API for fast backtesting.
+Description: Download and store historical market data. Plot time series. c++ API for fast backtesting.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
