--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,10 @@ Title: Quant Tools
 Version: 0.5.0
 Author: Stanislav Kovalevsky
 Maintainer: Stanislav Kovalevsky <so.kovalevsky@gmail.com>
-Description: Download and store historical market data. Plot time series. c++ API for fast backtesting.
+Description: Download and store historical market data. Plot time series. c++
+    API for fast backtesting.
+URL: https://quanttools.bitbucket.io/_site/index.html
+BugReports: https://bitbucket.org/quanttools/quanttools/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -18,4 +21,4 @@ Imports:
     Rcpp (>= 0.12.6)
 LinkingTo: Rcpp
 SystemRequirements: C++11
-RoxygenNote: 5.0.1.9000
+RoxygenNote: 5.0.1
