--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,7 @@ Title: Enhanced Quantitative Trading Modelling
 Version: 0.5.0
 Author: Stanislav Kovalevsky
 Maintainer: Stanislav Kovalevsky <so.kovalevsky@gmail.com>
-Description: Download and organize historical market data from multiple sources
-    like Yahoo, Google Finam and IQFeed. Code your trading algorithms in modern c+
-    +11 with powerful event driven tick processing API including trading costs and
-    exchange communication latency and transform detailed data seamlessly into R. In
-    just few lines of code you will be able to visualize every step of your trading
-    model from tick data to multi dimentional heat maps.
+Description: Download and organize historical market data from multiple sources like Yahoo, Google Finam and IQFeed. Code your trading algorithms in modern c++11 with powerful event driven tick processing API including trading costs and exchange communication latency and transform detailed data seamlessly into R. In just few lines of code you will be able to visualize every step of your trading model from tick data to multi dimensional heat maps.
 URL: https://quanttools.bitbucket.io/_site/index.html
 BugReports: https://bitbucket.org/quanttools/quanttools/issues
 License: GPL-3
