IQFeed documentation update to_ticks function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(store_finam_data)
 export(store_iqfeed_data)
 export(t_to_x)
 export(to_candles)
+export(to_ticks)
 import(data.table)
 importFrom(Rcpp,evalCpp)
 importFrom(grDevices,colorRampPalette)
