--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(back_test)
 export(bbands)
 export(bw)
 export(calc_decimal_resolution)
+export(ceiling_POSIXct)
 export(crossover)
 export(distinct_colors)
 export(dof)
@@ -53,6 +54,7 @@ export(store_iqfeed_data)
 export(t_to_x)
 export(to_candles)
 export(to_ticks)
+export(trunc_POSIXct)
 import(data.table)
 importFrom(Rcpp,evalCpp)
 importFrom(grDevices,colorRampPalette)
