--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,9 @@ importFrom(graphics,strwidth)
 importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(stats,time)
+importFrom(utils,capture.output)
+importFrom(utils,download.file)
 importFrom(utils,read.delim)
 importFrom(utils,tail)
+importFrom(utils,unzip)
 useDynLib(QuantTools)
