--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(store_finam_data)
 export(store_iqfeed_data)
 export(store_moex_data)
 export(t_to_x)
+export(to_UTC)
 export(to_candles)
 export(to_ticks)
 export(trunc_POSIXct)
