fixed Found no calls to: 'R_registerRoutines', 'R_useDynamicSymbols'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,4 +89,4 @@ importFrom(utils,download.file)
 importFrom(utils,read.delim)
 importFrom(utils,tail)
 importFrom(utils,unzip)
-useDynLib(QuantTools)
+useDynLib(QuantTools, .registration = TRUE)
