na_locf became smarter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%bw%")
 export("%dof%")
+export("%dofc%")
 export("%w/o%")
 export(QuantTools_settings)
 export(QuantTools_settings_defaults)
@@ -15,6 +16,7 @@ export(ceiling_POSIXct)
 export(crossover)
 export(distinct_colors)
 export(dof)
+export(dofc)
 export(ema)
 export(empty_plot)
 export(gen_futures_codes)
