--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(lines_stacked_hist)
 export(lmerge)
 export(multi_heatmap)
 export(na_locf)
+export(plot_dts)
 export(plot_table)
 export(plot_ts)
 export(returns)
@@ -63,6 +64,7 @@ export(to_candles)
 export(to_ticks)
 export(trunc_POSIXct)
 import(data.table)
+importFrom(R6,R6Class)
 importFrom(Rcpp,evalCpp)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rainbow)
