--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(trunc_POSIXct)
 import(data.table)
 importFrom(R6,R6Class)
 importFrom(Rcpp,evalCpp)
+importFrom(fasttime,fastPOSIXct)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
