--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(to_UTC)
 export(to_candles)
 export(to_ticks)
 export(trunc_POSIXct)
+export(vswitch)
 import(data.table)
 importFrom(R6,R6Class)
 importFrom(Rcpp,evalCpp)
