--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(QuantTools_settings)
 export(QuantTools_settings_defaults)
 export(add_last_values)
 export(add_legend)
+export(atr)
 export(back_test)
 export(bbands)
 export(bw)
