--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ importFrom(graphics,strheight)
 importFrom(graphics,strwidth)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(methods,formalArgs)
 importFrom(stats,time)
 importFrom(utils,capture.output)
 importFrom(utils,download.file)
