plot_dts histogram method added and examples updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(stochastic)
 export(store_finam_data)
 export(store_iqfeed_data)
 export(t_to_x)
+export(tlt)
 export(to_UTC)
 export(to_candles)
 export(to_ticks)
