--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,11 @@ export(add_last_values)
 export(add_legend)
 export(atr)
 export(back_test)
+export(barchart_get_eod)
+export(barchart_get_intraday)
+export(barchart_get_split_and_dividends)
+export(barchart_search_symbols)
+export(barchart_search_symbols_advanced)
 export(bbands)
 export(bw)
 export(calc_decimal_resolution)
